# hippo-hack

./: .env.example  .gitignore  CANCER_Hackathon_AI4good.ipynb  CONFIGURATION.md  README.md  gradio_frontend.py  langgraph.json  main.py  pyproject.toml  start_langgraph.py
rad_python/: configs.yaml  main.py
src/agent/: __init__.py  graph.py
tests/: __init__.py  test_medical_agent.py  test_rag_comparison.py
