[project]
name = "hippo-hack"
version = "0.1.0"
description = "Hippo - Your 24/7 medical assistant for automated radiology diagnosis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.42.0",
    "mistralai>=1.9.3",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchxrayvision>=1.3.5",
]
