[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-agent"
version = "0.1.0"
description = "Medical AI Agent for X-ray analysis and patient consultation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-mistralai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-tavily>=0.1.0",
    "langsmith>=0.1.0",
    "mistralai>=0.1.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
    "numpy>=1.21.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.0.0",
    "torchxrayvision>=1.0.0",
    "scikit-image>=0.19.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "langgraph-cli[inmem]>=0.3.6",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
